--- a/visualStudio/project/project/project.vcxproj
+++ b/visualStudio/project/project/project.vcxproj
@@ -75,6 +75,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\graphs\myTry.cpp" />
+    <ClCompile Include="..\..\..\graphs\second.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
