--- a/visualStudio/project/project/project.vcxproj.filters
+++ b/visualStudio/project/project/project.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="..\..\..\graphs\myTry.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\graphs\zero.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
